--- a/src/donations.html
+++ b/src/donations.html
@@ -94,10 +94,11 @@
         </section>
     </div>
 
-    <script src="navBar.txt"></script>
+    <script src="../src/templates/nav.js"></script>
     <script src="../src/templates/header.js"></script>
     <script>
         headerInit();
+        navBarInit();
 
         document.getElementById("nav-bar").innerHTML += navBar;
 
