--- a/src/about.html
+++ b/src/about.html
@@ -95,19 +95,31 @@
                         <div class="flex justify-end items-center">
                             <div class="grid grid-cols-20 w-full"> <!-- only slightly scuffed -->
                                 <p class="col-span-19 tracking-wide font-mono text-stone-200 lg:text-2xl sm:text-xl text-base text-right">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    Robotics finds itself at the crossroads between rigid thinking and creativity, it is both innovative, yet rooted in centuries and decades of researched methods and mechanisms. Furthermore, robotics is in many ways at the edge of life itself, and we savor this margin that we create within. We seek to build not only the simple machines of today, but the great vehicles of innovation of tomorrow. The mission of our team is to eat ramen, create robots, and do epic stuff.
                                 </p>
                                 <div class="col-span-1 flex justify-end items-center">
                                     <div class="z-10 h-full w-1 bg-purple-600"></div>
                                 </div>
                             </div>
                         </div>
+                        <div class="h-4"></div>
+                        <div class="flex justify-end w-full">
+                            <span class="relative font-mono text-stone-300 italic sm:text-xl text-base lg:text-3xl">
+                                <span class="block absolute -inset-1 -skew-y-[0.5deg] bg-gradient-to-r from-orange-500/70 to-red-500/70"></span>
+                                <span class="relative">Contact Us At:</span>
+                                <span class="relative underline text-slate-50">teammetalpipe@gmail.com</span>
+                            </span>
+                        </div>
                     </div>
                 </div>
 
+                <div class="about-header" about-right about-title="S E C U R I T Y" about-color="pink"></div>
+
+                <div class="about-member" about-right about-title="MR. COLD" about-src="../src/images/headshots/danny.jpg" about-color="pink" about-desc="I'm Danny, the security captain. As the tallest member on the team, it is my job to attack undesirables, such as Aman Garg."></div>
+
                 <div class="about-header" about-left about-title="C O D E" about-color="red"></div>
 
-                <div class="about-member" about-right about-title="DANNY KOLDOBSKIY" about-src="../src/images/headshots/danny.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
+                <div class="about-member" about-right about-title="!DANNY KOLDOBSKIY" about-src="../src/images/headshots/danny.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
                 <div class="about-member" about-left about-title="LIAM RIVERS" about-src="../src/images/headshots/liam.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
                 <div class="about-member" about-right about-title="LEO WANG" about-src="../src/images/headshots/leo.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
 
@@ -118,10 +130,10 @@
 
                 <div class="about-header" about-left about-title="O U T R E A C H" about-color="fuchsia"></div>
 
-                <div class="about-member" about-right about-title="ZENAIDA LAST" about-src="../src/images/headshots/zenaida.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
+                <div class="about-member" about-right about-title="ZENAIDA ROWE" about-src="../src/images/headshots/zenaida.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
                 <div class="about-member" about-left about-title="REEMA LAST" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
                 <div class="about-member" about-right about-title="ABRAHAM KARIKKINETH" about-src="../src/images/headshots/abe.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
-                <div class="about-member" about-left about-title="ARYA KAZEMNIA" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="Hi, I'm Arya,! I love making Tik-Toks and helping build our robot. I also enjoy all things space related, especially learning about different satellites."></div>
+                <div class="about-member" about-left about-title="ARYA KAZEMNIA" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="I love making Tik-Toks and helping build our robot. I also enjoy all things space related, especially learning about different satellites."></div>
 
                 <div class="about-header" about-middle about-title="M E N T O R S" about-color="purple"></div>
 
