--- a/src/donations.html
+++ b/src/donations.html
@@ -13,7 +13,7 @@
     <link rel="SHORTCUT ICON" href="../src/favicon.ico"/>
     <link rel="icon" href="../src/favicon.ico" type="image/ico"/>
 </head>
-<body class="bg-bg-center">
+<body class="bg-bg-center overflow-hidden">
     <div data-scroll-container>
         <div id="nav-bar" class="z-50 fixed"></div>
 
