--- a/src/about.html
+++ b/src/about.html
@@ -26,7 +26,7 @@
 
         <div class="flex justify-center">
             <section id="general" class="max-w-[1920px] w-screen" data-scroll-section>
-                <div class="h-nav-2x"></div>
+                <div class="h-nav"></div>
 
                 <div class="section-header" header-text="ABOUT US."></div>
 
