--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,8 @@
             <div class="absolute w-screen h-1 bg-fuchsia-950"></div>
             <div class="section-header" header-text="INNOVATION."></div>
 
+            <div class="h-nav"></div>
+
             <div class="flex justify-center w-full">
                 <div class="xl:w-4/5 w-[90%]">
                     <div class="group" data-scroll>
@@ -71,10 +73,10 @@
                         <div class="h-[30.6px]"></div>
                         <div class="h-4"></div>
                         <div class="flex justify-end items-start relative flex-col xl:flex-row">
-                            <div class="w-3/4 xl:w-[55%] ml-4 flex flex-row items-stretch">
+                            <div class="w-3/4 xl:w-[55%] max-h-[90vh] ml-4 flex flex-row items-stretch">
                                 <div class="mr-4 w-1 min-w-[0.25rem] bg-purple-600 origin-top scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform duration-500"></div>
                                 <div class="opacity-0 -translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 relative">
-                                    <video autoplay loop muted><source src="../src/videos/odo1.mp4" type="video/mp4"/></video>
+                                    <video autoplay loop muted class="max-h-[90vh]"><source src="../src/videos/odo1.mp4" type="video/mp4"/></video>
                                 </div>
                             </div>
                             <div class="flex-grow xl:h-0 h-4"></div>
@@ -86,31 +88,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="h-96"></div>
-                    <div class="group" data-scroll>
-                        <div class="flex justify-end items-start z-10">
-                            <p class="z-10 absolute tracking-widest text-7xl font-mono text-slate-50 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">HEADER</p>
-                            <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/70 via-fuchsia-500/70 scale-x-0 group-[.is-inview]:scale-x-100 transition-transform duration-1000 origin-right delay-100 ease-in-out"></div>
-                        </div>
-                        <div class="h-[30.6px]"></div>
-                        <div class="h-4"></div>
-                        <div class="flex justify-end items-start relative flex-col xl:flex-row">
-                            <div class="w-3/4 xl:w-[55%] ml-4 flex flex-row items-stretch">
-                                <div class="mr-4 w-1 min-w-[0.25rem] bg-purple-600 origin-top scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform duration-500"></div>
-                                <div class="opacity-0 -translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 relative">
-                                    <video autoplay loop muted><source src="../src/videos/odo1.mp4" type="video/mp4"/></video>
-                                </div>
-                            </div>
-                            <div class="flex-grow xl:h-0 h-4"></div>
-                            <div class="w-3/4 xl:w-[40%] relative flex justify-end self-end xl:self-start">
-                                <div class="mr-4 z-10 absolute h-full w-1 bg-purple-600 scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform origin-top duration-500"></div>
-                                <p class="opacity-0 translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 text-right mr-8">
-                                    <span class="font-[550] tracking-wide font-mono text-stone-200 text-2xl xl:text-xl 2xl:text-2xl">On our <span class="underline text-white decoration-fuchsia-600 font-semibold">2022-23 robot</span>, we had a large structure connecting our vertical lift with our horizontal extension. This was a large part, weighing around <span class="underline text-white decoration-fuchsia-600 font-semibold">779.557g</span>. Later in the season, we used generative design to generate a much more efficient part, weighing in at <span class="underline text-white decoration-fuchsia-600 font-semibold">195.314g</span>.</span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="h-96"></div>
                 </div>
                 
             </div>
