--- a/src/about.html
+++ b/src/about.html
@@ -28,7 +28,7 @@
             <section id="general" class="max-w-[1920px] w-screen" data-scroll-section>
                 <div class="h-nav"></div>
 
-                <div class="section-header" header-text="ABOUT US."></div>
+                <div class="section-header" header-text="ABOUT US." header-color="text-slate-50"></div>
 
                 <div class="h-nav"></div>
 
@@ -112,6 +112,8 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="h-nav"></div>
 
                 <div class="about-header" about-right about-title="S E C U R I T Y" about-color="pink"></div>
 
