--- a/src/donations.html
+++ b/src/donations.html
@@ -25,7 +25,7 @@
         <section id="main" data-scroll-section>
             <div class="h-nav"></div>
 
-            <div class="section-header" header-text="DONATIONS."></div>
+            <div class="section-header" header-text="DONATIONS." header-color="text-slate-50"></div>
 
             <div class="h-nav"></div>
 
