--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="SHORTCUT ICON" href="../src/favicon.ico"/>
     <link rel="icon" href="../src/favicon.ico" type="image/ico"/>
 </head>
-<body class="bg-gradient-to-r from-bg-side to-bg-side via-bg-center">
+<body class="bg-gradient-to-r bg-white">
     <div data-scroll-container>
         <div id="nav-bar"></div>
 
@@ -59,7 +59,7 @@
 
         <section id="main" class="max-w-[1920px] w-screen" data-scroll-section>
             <div class="absolute w-screen h-1 bg-fuchsia-950"></div>
-            <div class="section-header" header-text="INNOVATION."></div>
+            <div class="section-header" header-text="INNOVATION." header-color="text-neutral-900"></div>
 
             <div class="h-nav"></div>
 
@@ -67,7 +67,7 @@
                 <div class="xl:w-4/5 w-[90%]">
                     <div class="group" data-scroll>
                         <div class="flex justify-end items-start z-10">
-                            <p class="z-10 absolute tracking-widest text-7xl font-mono text-slate-50 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">HEADER</p>
+                            <p class="z-10 absolute tracking-widest text-7xl font-mono text-neutral-800 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">HEADER</p>
                             <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/70 via-fuchsia-500/70 scale-x-0 group-[.is-inview]:scale-x-100 transition-transform duration-1000 origin-right delay-100 ease-in-out"></div>
                         </div>
                         <div class="h-[30.6px]"></div>
@@ -83,32 +83,13 @@
                             <div class="w-3/4 xl:w-[40%] relative flex justify-end self-end xl:self-start">
                                 <div class="mr-4 z-10 absolute h-full w-1 bg-purple-600 scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform origin-top duration-500"></div>
                                 <p class="opacity-0 translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 text-right mr-8">
-                                    <span class="font-[550] tracking-wide font-mono text-stone-200 text-2xl xl:text-xl 2xl:text-2xl">On our <span class="underline text-white decoration-fuchsia-600 font-semibold">2022-23 robot</span>, we had a large structure connecting our vertical lift with our horizontal extension. This was a large part, weighing around <span class="underline text-white decoration-fuchsia-600 font-semibold">779.557g</span>. Later in the season, we used generative design to generate a much more efficient part, weighing in at <span class="underline text-white decoration-fuchsia-600 font-semibold">195.314g</span>.</span>
+                                    <span class="font-[550] tracking-wide font-mono text-neutral-700 text-2xl xl:text-xl 2xl:text-2xl">On our <span class="underline text-black decoration-fuchsia-600 font-semibold">2022-23 robot</span>, we had a large structure connecting our vertical lift with our horizontal extension. This was a large part, weighing around <span class="underline text-black decoration-fuchsia-600 font-semibold">779.557g</span>. Later in the season, we used generative design to generate a much more efficient part, weighing in at <span class="underline text-black decoration-fuchsia-600 font-semibold">195.314g</span>.</span>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                
             </div>
-        </section>
-
-        <section id="footer" data-scroll-section>
-            <span class="z-[1] grid grid-cols-13 w-screen bg-slate-50 text-center text-9xl font-[1000] font-mono text-footer-main">
-                <div></div>
-                <div class="flex justify-center items-center"><img src="../src/icons/png/birdFull.png" class="h-32 w-32"></div>
-                <p>M</p>
-                <p>E</p>
-                <p>T</p>
-                <p>A</p>
-                <p>L</p>
-                <p> </p>
-                <p>P</p>
-                <p>I</p>
-                <p>P</p>
-                <p>E</p>
-                <div></div>
-            </span>
         </section>
     </div>
 
@@ -124,11 +105,13 @@
         document.getElementById('nav-bar-main').setAttribute('href', '#splash-screen');
         document.getElementById('nav-bar-main').setAttribute('data-scroll-to', '');
 
-        const scroll = new LocomotiveScroll({
-            el: document.querySelector("[data-scroll-container]"),
-            smooth: true,
-            tablet: { smooth: true },
-            smartphone: { smooth: true }
+        window.addEventListener('load', () => {
+            const scroll = new LocomotiveScroll({
+                el: document.querySelector("[data-scroll-container]"),
+                smooth: true,
+                tablet: { smooth: true },
+                smartphone: { smooth: true }
+            });
         });
     </script>
 </body>
