--- a/src/about.html
+++ b/src/about.html
@@ -115,26 +115,22 @@
 
                 <div class="h-nav"></div>
 
-                <div class="about-header" about-right about-title="S E C U R I T Y" about-color="pink"></div>
-
-                <div class="about-member" about-right about-title="MR. COLD" about-src="../src/images/headshots/danny.jpg" about-color="pink" about-desc="I'm Danny, the security captain. As the tallest member on the team, it is my job to attack undesirables, such as Aman Garg."></div>
-
                 <div class="about-header" about-left about-title="C O D E" about-color="red"></div>
 
-                <div class="about-member" about-right about-title="!DANNY KOLDOBSKIY" about-src="../src/images/headshots/danny.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
-                <div class="about-member" about-left about-title="LIAM RIVERS" about-src="../src/images/headshots/liam.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
-                <div class="about-member" about-right about-title="LEO WANG" about-src="../src/images/headshots/leo.jpg" about-color="red" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
+                <div class="about-member" about-right about-title="DANNY KOLDOBSKIY" about-src="../src/images/headshots/danny.jpg" about-color="red" about-desc="I enjoy programming and designing STEM lessons and activities. I'm passionate about STEM education and Artificial Intelligence, but above all I love Civilization 6- I have over 6k hours!"></div>
+                <div class="about-member" about-left about-title="LIAM RIVERS" about-src="../src/images/headshots/liam.jpg" about-color="red" about-desc="I love to program and chill with my (very angry) cat. In my free time, I also sail."></div>
+                <div class="about-member" about-right about-title="LEO WANG" about-src="../src/images/headshots/leo.jpg" about-color="red" about-desc="I'm passionate about simulations and enjoy designing robots and strategies around new games each year. I have been resigned to Website Team :("></div>
 
                 <div class="about-header" about-right about-title="C A D" about-color="sky"></div>
 
-                <div class="about-member" about-left about-title="JERRY HUANG" about-src="../src/images/headshots/jerry.jpg" about-color="sky" about-desc="Lorem ipsum dolor sit amet, &lt;span class='underline'>consectetur adipiscing&lt;/span> elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
-                <div class="about-member" about-right about-title="AMAN GARG" about-src="../src/images/headshots/aman.jpg" about-color="sky" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
+                <div class="about-member" about-left about-title="JERRY HUANG" about-src="../src/images/headshots/jerry.jpg" about-color="sky" about-desc="I'm fascinated by Computer Aided Design and its applications. When not doing robotics, I run with the cross country team and overuse discord."></div>
+                <div class="about-member" about-right about-title="AMAN GARG" about-src="../src/images/headshots/aman.jpg" about-color="sky" about-desc="I love 3d printing and all things related to that. In my free time, I play with my dog and criticize cats."></div>
 
                 <div class="about-header" about-left about-title="O U T R E A C H" about-color="fuchsia"></div>
 
-                <div class="about-member" about-right about-title="ZENAIDA ROWE" about-src="../src/images/headshots/zenaida.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
-                <div class="about-member" about-left about-title="REEMA LAST" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
-                <div class="about-member" about-right about-title="ABRAHAM KARIKKINETH" about-src="../src/images/headshots/abe.jpg" about-color="fuchsia" about-desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."></div>
+                <div class="about-member" about-right about-title="ZENAIDA ROWE" about-src="../src/images/headshots/zenaida.jpg" about-color="fuchsia" about-desc="I'm passionate about STEM education and how we can work to improve it. This year I'm hoping to apply our robotic's team's resources and knowledge to STEM outreach."></div>
+                <div class="about-member" about-left about-title="REEMA LAST" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="I enjoy animation and art. I love robotics and the way FTC combines design and art with engineering challenges."></div>
+                <div class="about-member" about-right about-title="ABRAHAM KARIKKINETH" about-src="../src/images/headshots/abe.jpg" about-color="fuchsia" about-desc="I enjoy math and am currently working on a personality."></div>
                 <div class="about-member" about-left about-title="ARYA KAZEMNIA" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="I love making Tik-Toks and helping build our robot. I also enjoy all things space related, especially learning about different satellites."></div>
 
                 <div class="about-header" about-middle about-title="M E N T O R S" about-color="purple"></div>
