--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="SHORTCUT ICON" href="../src/favicon.ico"/>
     <link rel="icon" href="../src/favicon.ico" type="image/ico"/>
 </head>
-<body class="bg-gradient-to-r bg-white">
+<body class="bg-gradient-to-r from-bg-side to-bg-side via-bg-center">
     <div data-scroll-container>
         <div id="nav-bar"></div>
 
@@ -59,28 +59,27 @@
 
         <section id="main" class="max-w-[1920px] w-screen" data-scroll-section>
             <div class="absolute w-screen h-1 bg-fuchsia-950"></div>
-            <div class="section-header" header-text="INNOVATION." header-color="text-neutral-900"></div>
 
-            <div class="h-nav"></div>
+            <div class="section-header" header-text="INNOVATION." header-color="text-neutral-900"></div>
+            <div class="h-nav-2x"></div>
 
             <div class="flex justify-center w-full">
-                <div class="xl:w-4/5 w-[90%]">
+                <div class="xl:w-[85%] w-[90%]">
                     <div class="group" data-scroll>
                         <div class="flex justify-end items-start z-10">
-                            <p class="z-10 absolute tracking-widest text-7xl font-mono text-neutral-800 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">HEADER</p>
+                            <p class="z-10 absolute tracking-widest text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-mono text-neutral-800 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">DESIGN</p>
                             <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/70 via-fuchsia-500/70 scale-x-0 group-[.is-inview]:scale-x-100 transition-transform duration-1000 origin-right delay-100 ease-in-out"></div>
                         </div>
                         <div class="h-[30.6px]"></div>
                         <div class="h-4"></div>
-                        <div class="flex justify-end items-start relative flex-col xl:flex-row">
-                            <div class="w-3/4 xl:w-[55%] max-h-[90vh] ml-4 flex flex-row items-stretch">
-                                <div class="mr-4 w-1 min-w-[0.25rem] bg-purple-600 origin-top scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform duration-500"></div>
+                        <div class="flex justify-end items-start relative flex-row">
+                            <div class="w-[55%] max-h-[90vh] ml-8 flex justify-center flex-row items-stretch -mt-48">
                                 <div class="opacity-0 -translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 relative">
-                                    <video autoplay loop muted class="max-h-[90vh]"><source src="../src/videos/odo1.mp4" type="video/mp4"/></video>
+                                    <video autoplay loop muted class="max-h-[50vh]"><source src="../src/videos/hookStress.mp4" type="video/mp4"/></video>
                                 </div>
                             </div>
                             <div class="flex-grow xl:h-0 h-4"></div>
-                            <div class="w-3/4 xl:w-[40%] relative flex justify-end self-end xl:self-start">
+                            <div class="w-3/4 xl:w-[40%] relative flex justify-end self-start">
                                 <div class="mr-4 z-10 absolute h-full w-1 bg-purple-600 scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform origin-top duration-500"></div>
                                 <p class="opacity-0 translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 text-right mr-8">
                                     <span class="font-[550] tracking-wide font-mono text-neutral-700 text-2xl xl:text-xl 2xl:text-2xl">On our <span class="underline text-black decoration-fuchsia-600 font-semibold">2022-23 robot</span>, we had a large structure connecting our vertical lift with our horizontal extension. This was a large part, weighing around <span class="underline text-black decoration-fuchsia-600 font-semibold">779.557g</span>. Later in the season, we used generative design to generate a much more efficient part, weighing in at <span class="underline text-black decoration-fuchsia-600 font-semibold">195.314g</span>.</span>
@@ -88,8 +87,105 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="h-nav-2x"></div>
+                    <div class="h-nav-2x"></div>
+
+                    <div class="group" data-scroll>
+                        <div class="flex justify-start items-start z-10">
+                            <p class="z-10 absolute tracking-widest text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-mono text-neutral-800 opacity-0 -translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">DESIGN</p>
+                            <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-l from-purple-600/70 via-fuchsia-500/70 scale-x-0 group-[.is-inview]:scale-x-100 transition-transform duration-1000 origin-left delay-100 ease-in-out"></div>
+                        </div>
+                        <div class="h-[30.6px]"></div>
+                        <div class="h-4"></div>
+                        <div class="flex justify-start items-end relative flex-row-reverse">
+                            <div class="w-[55%] max-h-[90vh] mr-8 flex justify-center flex-row items-stretch -mt-48">
+                                <div class="opacity-0 translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 relative">
+                                    <video autoplay loop muted class="max-h-[50vh] xl:block hidden"><source src="../src/videos/odo1.mp4" type="video/mp4"/></video>
+                                    <video autoplay loop muted class="max-h-[50vh] xl:hidden"><source src="../src/videos/odo2.mp4" type="video/mp4"/></video>
+                                </div>
+                            </div>
+                            <div class="flex-grow xl:h-0 h-4"></div>
+                            <div class="w-3/4 xl:w-[40%] relative flex justify-end self-start flex-col-reverse">
+                                <div class="ml-4 z-10 absolute h-full w-1 bg-purple-600 scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform origin-top duration-500"></div>
+                                <p class="opacity-0 -translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 text-left ml-8">
+                                    <span class="font-[550] tracking-wide font-mono text-neutral-700 text-2xl xl:text-xl 2xl:text-2xl">On our <span class="underline text-black decoration-fuchsia-600 font-semibold">2022-23 robot</span>, we had a large structure connecting our vertical lift with our horizontal extension. This was a large part, weighing around <span class="underline text-black decoration-fuchsia-600 font-semibold">779.557g</span>. Later in the season, we used generative design to generate a much more efficient part, weighing in at <span class="underline text-black decoration-fuchsia-600 font-semibold">195.314g</span>.</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="h-nav-2x"></div>
+                    <div class="section-header" header-text="PRECISION." header-color="text-neutral-900"></div>
+                    <div class="h-nav-2x"></div>
+
+                    <div class="group" data-scroll>
+                        <div class="flex justify-end items-start z-10">
+                            <p class="z-10 absolute tracking-widest text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-mono text-neutral-800 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">ODOMETRY</p>
+                            <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/70 via-fuchsia-500/70 scale-x-0 group-[.is-inview]:scale-x-100 transition-transform duration-1000 origin-right delay-100 ease-in-out"></div>
+                        </div>
+                        <div class="h-[30.6px]"></div>
+                        <div class="h-4"></div>
+                        <div class="flex justify-end items-start relative flex-row">
+                            <div class="w-[55%] max-h-[90vh] ml-8 flex justify-center flex-row items-stretch -mt-32">
+                                <div class="opacity-0 -translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 relative">
+                                    <!-- shhhhhhhhhhhhhhhhhhhh -->
+                                    <video autoplay loop muted class="max-h-[50vh] xl:block hidden"><source src="../src/videos/odo1.mp4" type="video/mp4"/></video>
+                                    <video autoplay loop muted class="max-h-[50vh] xl:hidden"><source src="../src/videos/odo2.mp4" type="video/mp4"/></video>
+                                </div>
+                            </div>
+                            <div class="flex-grow xl:h-0 h-4"></div>
+                            <div class="w-3/4 xl:w-[40%] relative flex justify-end self-start">
+                                <div class="mr-4 z-10 absolute h-full w-1 bg-purple-600 scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform origin-top duration-500"></div>
+                                <p class="opacity-0 translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 text-right mr-8">
+                                    <span class="font-[550] tracking-wide font-mono text-neutral-700 text-2xl xl:text-xl 2xl:text-2xl">We utilized the power of code and coffee to create a custom odometry system. It is super good or something (or so I've been told). Many thanks to the one undergrad that interned at Google or something and wrote like a 100+ page paper on the inner workings of odometry, it really came in clutch.</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="h-nav-2x"></div>
+                    <div class="section-header" header-text="COMMUNITY." header-color="text-neutral-900"></div>
+                    <div class="h-nav-2x"></div>
+
+                    <div class="group" data-scroll>
+                        <div class="flex justify-end items-start z-10">
+                            <p class="z-10 absolute tracking-widest text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-mono text-neutral-800 opacity-0 translate-x-40 group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all duration-700 delay-100 ease-in-out">ODOMETRY</p>
+                            <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/70 via-fuchsia-500/70 scale-x-0 group-[.is-inview]:scale-x-100 transition-transform duration-1000 origin-right delay-100 ease-in-out"></div>
+                        </div>
+                        <div class="h-[30.6px]"></div>
+                        <div class="h-4"></div>
+                        <div class="flex justify-end items-start relative flex-row">
+                            <div class="w-[55%] max-h-[90vh] ml-8 flex justify-center flex-row items-stretch -mt-32">
+                                <div class="opacity-0 -translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 relative">
+                                    <!-- shhhhhhhhhhhhhhhhhhhh -->
+                                    <img class="max-h-[50vh] xl:block hidden" src="../src/images/communityPlaceholder.jpg">
+                                    <img class="max-h-[50vh] xl:hidden" src="../src/images/communityPlaceholderVert.jpg">
+                                </div>
+                            </div>
+                            <div class="flex-grow xl:h-0 h-4"></div>
+                            <div class="w-3/4 xl:w-[40%] relative flex justify-end self-start">
+                                <div class="mr-4 z-10 absolute h-full w-1 bg-purple-600 scale-y-0 group-[.is-inview]:scale-y-100 delay-1000 transition-transform origin-top duration-500"></div>
+                                <p class="opacity-0 translate-x-16 delay-[1600ms] group-[.is-inview]:opacity-100 group-[.is-inview]:translate-x-0 transition-all ease-in-out duration-700 text-right mr-8">
+                                    <span class="font-[550] tracking-wide font-mono text-neutral-700 text-2xl xl:text-xl 2xl:text-2xl">We utilized the power of code and coffee to create a custom odometry system. It is super good or something (or so I've been told). Many thanks to the one undergrad that interned at Google or something and wrote like a 100+ page paper on the inner workings of odometry, it really came in clutch.</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>            
                 </div>
             </div>
+        </section>
+
+        <section id="footer" data-scroll-section>
+            <div class="h-nav-2x"></div>
+            <div class="h-nav-2x"></div>
+            <div class="w-full flex justify-center">
+                <p class="text-6xl font-mono font-extrabold tracking-widest italic">WE ARE</p>
+            </div>
+            <div class="w-screen h-[30rem] flex justify-start absolute">
+                <div class="bg-gradient-to-t w-full h-full from-red-700 via-orange-500 scale-x-125"></div> <!-- hack shhh -->
+            </div>
+            <div class="section-header" header-text="METAL PIPE" header-color="text-black"></div>
         </section>
     </div>
 
